--- a/pages/scroll/scroll.wxss
+++ b/pages/scroll/scroll.wxss
@@ -1,1 +1,8 @@
 /* pages/scroll/scroll.wxss */
+.title{
+    box-sizing: border-box;
+    height: 50rpx;
+    width: 100%;
+    overflow: hidden;
+    font-size: 40rpx;
+}
