--- a/pages/canvas/canvas.wxml
+++ b/pages/canvas/canvas.wxml
@@ -1,6 +1,6 @@
 <view class="canvasBox" style="width:{{width}}px;height:{{height}}px">
     <view class="sign-tips">
-       <!--<text>{{tips}}</text>-->
+       <text>{{tips}}</text>
     </view>
 
     <view class="sign-operation">
